feat: update user authentication and feed features
- Refactored global styles in styles.scss and introduced utility classes in _utilities.scss.
- Created utility styles for cards, forms, buttons, messages, spacing, states, and typography.